--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
-    "autoprefixer": "latest",
-    "next": "latest",
-    "postcss": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "latest"
-  }
+"devDependencies": {
+  "autoprefixer": "^10.4.14",
+  "postcss": "^8.4.21",
+  "postcss-import": "^15.1.0",
+  "tailwindcss": "^3.3.2"
+}
+
 }
