--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
 "devDependencies": {
+  "next": "^13.4.19",
   "autoprefixer": "^10.4.14",
   "postcss": "^8.4.21",
   "postcss-import": "^15.1.0",
