--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "build": "next build",
     "start": "next start"
   },
-"devDependencies": {
-  "next": "^13.4.19",
-  "autoprefixer": "^10.4.14",
-  "postcss": "^8.4.21",
-  "postcss-import": "^15.1.0",
-  "tailwindcss": "^3.3.2"
-}
-
+  "dependencies": {
+    "next": "^13.4.19", 
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.3.2"
+  }
 }
